RESOLVED FIXED275196
[WebGPU] GPUTextureView can surprisingly be garbage collected
https://bugs.webkit.org/show_bug.cgi?id=275196
Summary [WebGPU] GPUTextureView can surprisingly be garbage collected
Mike Wyrzykowski
Reported 2024-06-05 22:31:03 PDT
[WebGPU] GPUTextureView can surprisingly be garbage collected
Attachments
Mike Wyrzykowski
Comment 1 2024-06-05 22:31:15 PDT
Mike Wyrzykowski
Comment 2 2024-06-05 22:46:34 PDT
EWS
Comment 3 2024-06-06 23:27:53 PDT
Committed 279797@main (11d812053475): <https://commits.webkit.org/279797@main> Reviewed commits have been landed. Closing PR #29571 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.